--- a/notes.tex
+++ b/notes.tex
@@ -1345,12 +1345,55 @@ FloydWarshall($G$)\\
 	\hspace*{16mm} set $\opt(u, v, k) = \min\{\opt(u, v, k-1),\ \opt(u, k, k-1),\ \opt(k, v, k-1)\}$\\
 ---------------------------------------------------------------------------------------------------------\\
 There are $n^3$ subproblems that each contain 3 smaller problems. Thus the running time is $O(n^3)$.
-\subsection{Independent Set on a Tree}
+\subsection{Independent Set Problem}
+Recall that an independent set is a collection of pairwise non-adjacent vertices. Our goal is to find the largest cardinality independent set in the graph.
+\begin{enumerate}
+	\item What happens if the algorithm selects a vertex $v$ to be in the independent set?
+	\begin{itemize}
+		\item Then it can't select any neighbour of $v$.
+		\item The remaining vertices from which to choose are $V \sm \{v\} \cup \Ga(v)$.
+	\end{itemize}
+	\item What happens if the algorithm doesn't select the vertex $v$ to be in the independent set?
+	\begin{itemize}
+		\item Then the remaining vertices to choose from are $V \sm \{v\}$.
+	\end{itemize}
+\end{enumerate}
+Given this, our recursive formula is
+\[\opt(G) = \max\{\opt(G \sm \{v\}),\ 1 + \opt(G \sm \{v\} \cup \Ga(v))\},\ \forall v \in V\]
+with the base case $\opt(\emp) = 0$\\\\
+We can try to use this to formulate a dynamic program. Except we can't, because there is no natural ordering to the sub-problems, and a possible exponential number of sub-problems. Indeed, a dynamic programming approach won't work. In fact, we don't believe that any approach can quickly solve this problem as it's an NP-hard problem!\\\\
+So let's be less ambitious and try to solve an easier problem...
+\subsubsection{The Independent Set in a Tree Problem}
+Same setup as the above problem except now our graph is a tree. No now we must ask:
+\begin{enumerate}
+	\item What happens if the algorithm selects some arbitrary root vertex $r$ in the tree to be in the independent set?
+	\begin{itemize}
+		\item Then it can't select any children $c(r)$ of $r$.
+		\item The remaining vertices to choose from are $V \sm \{r\} \cup c(r)$
+	\end{itemize}
+	\item What happens if the algorithm doesn't select the root vertex $r$ to be in the independent set?
+	\begin{itemize}
+		\item Then the remaining vertices to choose from are $V \sm \{r\}$.
+	\end{itemize}
+\end{enumerate}
+Thus the recursive formula is
+\[\opt(T_v) = \max\Bigg\{\sum_{k \in c(v)} \opt(T_u),\ 1 + \sum_{w \in c^2(v)} \opt(T_w)\Bigg\},\ \forall v \in V\]
+with the base case $\opt(\emp) = 0$, and where $c^2(v)$ is the set of grandchildren of $v$.\\\\
+This is better than the previous problem because there are at most $n$ subproblems (which is polynomial), and there is a natural ordering to the sub-problems too, as $[i] \prec [j]$ iff $x_i$ is the descendant of $x_j$. So let's use this to make our dynamic program. \\\\
+---------------------------------------------------------------------------------------------------------
+IndepSetOnATree($T$)\\
+	\hspace*{7mm} set $\opt(\emp) = 0$\\
+	\hspace*{7mm} order the vertices $\{1, 2, \dots, r\}$ by height in $T$\\
+	\hspace*{7mm} for each vertex $v \in \{1, 2, \dots, r\}$\\
+	\hspace*{14mm} set $\ds \opt(T_v) = \max\Bigg\{\sum_{k \in c(v)} \opt(T_u),\ 1 + \sum_{w \in c^2(v)} \opt(T_w)\Bigg\}$\\
+---------------------------------------------------------------------------------------------------------\\
+There are at most $n$-sub-problems, each with at most $n$ smaller problems. Thus the runtime seems to be $O(n^2)$. However, note that each subproblems is used only twice as a sub-sub-problem: once for its parent and once for its grandparent. Taking this into account, we see that the runtime is actually $O(n)$.
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Network Flows}
+In the shortest path problem we wanted to find a path of minimum cost/length in a directed graph from a source vertex $s$ to a sink vertex $t$. In the maximum flow problem, we want to pack in as many $s-t$ paths as possible that fit into the graph given the capacity constraints on each edge. In other words, suppose some good is produced at some source vertex $s$ and we want to send as many units of it as possible through the graph to the sink vertex $t$, where each arc $a = (i, j)$ has capacity $u_a = u_{ij}$ where an arc's capacity is the maximum amount of the good that can be sent over the arc.
 \subsection{Ford-Fulkerson Algorithm}
 \subsection{Max Flow - Min Cut Theorem}
 \subsection{Model Extensions}
